backends/drm: don't attempt multi GPU copies with unsupported formats

Specifically with the proprietary Nvidia driver, the plane requires a linear
modifier, which we can't render to with OpenGL. When attempting to render with
that buffer, we end up logging errors at a really high rate, and falling back
to a software cursor rather than another import mode.

BUG: 517987